fix: improve responsive design and layout adjustments in index page, including text sizes and spacing for better mobile experience

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,11 @@ fieldset {
 .text-38 {
   font-size: 3.8rem;
 }
+@media (max-width: 768px) {
+  .text-38 {
+    font-size: 24px;
+  }
+}
 
 .text-34 {
   font-size: 3.4rem;
@@ -188,6 +193,15 @@ fieldset {
 @media (max-width: 768px) {
   .text-30 {
     font-size: 24px;
+  }
+}
+
+.text-30-sp {
+  font-size: 3rem;
+}
+@media (max-width: 768px) {
+  .text-30-sp {
+    font-size: 20px;
   }
 }
 
@@ -348,6 +362,11 @@ fieldset {
   line-height: 1.5;
   letter-spacing: 1%;
 }
+@media (max-width: 768px) {
+  .kv__copy p {
+    font-size: 18px !important;
+  }
+}
 .kv__brand {
   max-width: 57rem;
   width: 100%;
@@ -360,6 +379,12 @@ fieldset {
   padding: 2rem 3rem;
   margin-top: 1.2rem;
   margin-bottom: 2rem;
+}
+@media (max-width: 768px) {
+  .kv__brand {
+    margin-top: 36px;
+    height: 75px;
+  }
 }
 .kv__brand img {
   width: 100%;
@@ -557,11 +582,12 @@ fieldset {
 .risk-panel__issues {
   position: relative;
   display: grid;
-  padding: 8rem 0 4.8rem;
+  padding: 2rem 0 4.8rem;
 }
 @media (max-width: 768px) {
   .risk-panel__issues {
     padding: 4rem 0 2.8rem;
+    gap: 4rem;
   }
 }
 .risk-panel__issue {
@@ -569,9 +595,27 @@ fieldset {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 4rem;
+}
+@media (max-width: 768px) {
+  .risk-panel__issue {
+    gap: 2rem;
+  }
 }
 .risk-panel__issue.reverse {
   justify-content: flex-end;
+  margin-top: -5rem;
+  gap: 0;
+}
+@media (max-width: 1024px) {
+  .risk-panel__issue.reverse {
+    margin-top: -2rem;
+  }
+}
+@media (max-width: 768px) {
+  .risk-panel__issue.reverse {
+    margin-top: 0;
+  }
 }
 .risk-panel__issue.reverse .risk-panel__bubble::before {
   border-left: none;
@@ -586,24 +630,55 @@ fieldset {
   height: 9.7rem;
 }
 .risk-panel__issue.reverse .risk-panel__issue-visual {
-  width: 35rem;
+  margin-left: 6rem;
 }
-.risk-panel__issue:nth-of-type(3) .risk-panel__issue-visual {
-  width: 26rem;
+@media (max-width: 1024px) {
+  .risk-panel__issue.reverse .risk-panel__issue-visual {
+    margin-left: 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .risk-panel__issue.reverse .risk-panel__issue-visual {
+    margin-left: 0;
+  }
+}
+.risk-panel__issue:nth-of-type(3) {
+  margin-top: -5rem;
+}
+@media (max-width: 1024px) {
+  .risk-panel__issue:nth-of-type(3) {
+    margin-top: -2rem;
+  }
+}
+@media (max-width: 768px) {
+  .risk-panel__issue:nth-of-type(3) {
+    margin-top: 0;
+  }
 }
 .risk-panel__issue-visual {
-  width: 29rem;
+  width: 22%;
   height: auto;
 }
 .risk-panel__issue-visual img {
   width: 100%;
 }
+@media (max-width: 1024px) {
+  .risk-panel__issue-visual {
+    width: 25%;
+  }
+}
+@media (max-width: 768px) {
+  .risk-panel__issue-visual {
+    width: 30%;
+  }
+}
 .risk-panel__bubble {
   position: relative;
-  width: 44%;
+  max-width: 60rem;
+  width: 100%;
   background: #fff;
   border-radius: 49px;
-  padding: 18px 48px;
+  padding: 18px 4.8rem;
   color: #008080;
   font-size: 20px;
   font-weight: 700;
@@ -612,8 +687,8 @@ fieldset {
 }
 @media (max-width: 768px) {
   .risk-panel__bubble {
-    width: 56%;
     font-size: 16px;
+    padding: 18px 2.2rem;
   }
 }
 .risk-panel__bubble::after {
