--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -46,6 +46,11 @@
         font-weight: 700;
         line-height: 1.5;
         letter-spacing: 1%;
+        p {
+            @include md {
+                font-size: 18px !important;
+            }
+        }
     }
 
     &__brand {
@@ -60,7 +65,10 @@
         padding: 2rem 3rem;
         margin-top: 1.2rem;
         margin-bottom: 2rem;
-
+        @include md {
+            margin-top: 36px;
+            height: 75px;
+        }
         img {
             width: 100%;
             height: auto;
@@ -267,9 +275,10 @@
     &__issues {
         position: relative;
         display: grid;
-        padding: 8rem 0 4.8rem;
+        padding: 2rem 0 4.8rem;
         @include md {
             padding: 4rem 0 2.8rem;
+            gap: 4rem;
         }
     }
 
@@ -278,10 +287,20 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        gap: 4rem;
         @include md {
+            gap: 2rem;
         }
         &.reverse {
             justify-content: flex-end;
+            margin-top: -5rem;
+            gap: 0;
+            @include lg {
+                margin-top: -2rem;
+            }
+            @include md {
+                margin-top: 0;
+            }
             .risk-panel__bubble {
                 &::before {
                     border-left: none;
@@ -298,37 +317,56 @@
                 }
             }
             .risk-panel__issue-visual {
-                width: 35rem;
+                margin-left: 6rem;
+                @include lg {
+                    margin-left: 2rem;
+                }
+                @include md {
+                    margin-left: 0;
+                }
             }
         }
         &:nth-of-type(3) {
+            margin-top: -5rem;
+            @include lg {
+                margin-top: -2rem;
+            }
+            @include md {
+                margin-top: 0;
+            }
             .risk-panel__issue-visual {
-                width: 26rem;
             }
         }
         &-visual {
-            width: 29rem;
+            width: 22%;
             height: auto;
             img {
                 width: 100%;
+            }
+            @include lg {
+                width: 25%;
+            }
+            @include md {
+                width: 30%;
             }
         }
     }
 
     &__bubble {
         position: relative;
-        width: 44%;
+        max-width: 60rem;
+        width: 100%;
         background: #fff;
         border-radius: 49px;
-        padding: 18px 48px;
+        padding: 18px 4.8rem;
         color: #008080;
         font-size: 20px;
         font-weight: 700;
         line-height: 1.5;
         word-wrap: normal;
         @include md {
-            width: 56%;
             font-size: 16px;
+            padding: 18px 2.2rem;
         }
         &::after {
             content: "";
